<resources>
    <string name="app_name">Wander Ease</string>
    <string name="app_package" translatable="false">com.ironcodesoftware.wanderease</string>
    <string name="location_field" translatable="false">deliveryLocation</string>
    <string name="user_log" translatable="false">userLog.ser</string>
    <string name="splash" translatable="false">userLog.ser</string>
    <string name="responseOk">OK</string>
    <string name="loading">Loading…</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_image">+ Upload Image</string>
    <string name="back">Go Back</string>
    <string name="search">Enter search key…</string>
    <string name="product_list_empty">Product List Empty</string>
    <string name="place_order">Place Order</string>
    <string name="total">Total:</string>
    <string name="location">Delivery Location:</string>
    <string name="change_location">Change delivery location</string>
    <string name="select_location">Select delivery location</string>
    <string name="confirm_location">Confirm delivery location</string>
    <string name="checkout" translatable="false">Checkout</string>
    <string name="total_items">Total Items</string>
    <string name="total_amount">Total Amount</string>
    <string name="not_specified">"Not specified"</string>
    <string name="payment_success">Payment Successful</string>
    <string name="back_to_home">Back to Home</string>
    <string name="empty_orders">No Orders Yet</string>
    <string name="shop_now">Explore WanderEase</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="no_new_messages">No New Messages</string>
    <string name="language_change_confirmation_message">Do you want to change your display language to Sinhala</string>
    <string name="main_returningUser" translatable="false">ReturningUser</string>
    <string name="copyright" translatable="false">© 2025 WanderEase</string>
    <string name="terms_policy">By signing in or creating an account, you agree with our</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="policy">Privacy Statement</string>
    <string name="and">and</string>
    <string name="language">භාෂාව - Language (English)</string>
    <string name="policies">Policies</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="main_explore_products" translatable="false">Explore Your Favourite Shopping Items in the South of Sri Lanka</string>
    <string name="main_rent_vehicles" translatable="false">Rent Vehicles for Easy Travels</string>
    <string name="main_book_guides" translatable="false">Plan Your Travels with Tour Guides</string>
    <string name="main_be_partner" translatable="false">Join Our Partner Program</string>
    <string name="main_getStarted" translatable="false">Get Started</string>
    <string name="main_next" translatable="false">Next</string>
    <string name="main_subtext" translatable="false">Enhance your travelling Experience in Sri Lanka</string>
    <string name="login_switch_login" translatable="false">Log In</string>
    <string name="login_switch_signup" translatable="false">Sign Up</string>
    <string name="login_email">Enter Email Address</string>
    <string name="login_password">Enter Password</string>
    <string name="login_goto_register">New user? Register now</string>
    <string name="signup_displayName">Enter Display Name</string>
    <string name="signup_mobile">Enter Mobile</string>
    <string name="bottom_nav_home">Search</string>
    <string name="bottom_nav_cart">Cart</string>
    <string name="bottom_nav_saved">Saved</string>
    <string name="bottom_nav_bookings">Bookings</string>
    <string name="bottom_nav_Account">Account</string>
    <string name="home_search_product">Products</string>
    <string name="home_search_vehicleRental">Vehicle Rental</string>
    <string name="home_search_guide">Tour Guides</string>
    <string name="no_reviews">No reviews yet</string>
    <string name="reviews">Reviews</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="account_menu_orders">My Orders</string>
    <string name="account_menu_reviews">My Reviews</string>
    <string name="account_menu_messages">My Messages</string>
    <string name="account_menu_help">Help Ticket</string>
    <string name="account_menu_text_partner">Partner Program</string>
    <string name="account_menu_button_sell">List your product or service on Wander Ease</string>
    <string name="settings">Settings</string>
    <string name="my_orders_completed_orders">Completed</string>
    <string name="my_orders_to_receive_orders">To Receive</string>
    <string name="my_orders_to_review_orders">To Review</string>
    <string name="review">Review</string>
    <string name="partner_dashboard" translatable="false">Dashboard</string>
    <string name="partner_products">Products</string>
    <string name="partner_services">Services</string>
    <string name="partner_orders">Orders</string>
    <string name="partner_bookings">Bookings</string>
    <string name="partner_Messages">Messages</string>
    <string name="partner_Help">Help Ticket</string>
    <string name="partner_add_shortcut">Add a launcher shortcut</string>
    <string name="partner_product_AddNew_title">Add New Product</string>
    <string name="partner_product_vewProduct_list_button">View All Products</string>
    <string name="partner_product_saveProduct_button">Save Product</string>
    <string name="product_title">Title</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_spec">Description</string>
    <string name="product_color">Color</string>
    <string name="product_category">Category</string>
    <string name="product_tab_my_products">My Products</string>
    <string name="product_tab_my_add_products">Add New Product</string>
    <string name="update_product_quantity">Update Product Quantity</string>
    <string name="partner_order_tab_New_orders">New Orders</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="add_new_vehicles">Add New Vehicle</string>
    <string name="my_tour_guides">My Guides</string>
    <string name="add_new_tour_guide">Add New Guide</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="gear_mode">Gear Mode</string>
    <string name="highlights">Highlights</string>
    <string name="price_per_day">Price per day</string>
    <string name="availability">Availability</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="save_vehicle">Save Vehicle</string>
    <string name="price_per_hour">Price per Hour</string>
    <string name="bio">Bio</string>
    <string name="experience" translatable="false">Experience</string>
    <string name="type" translatable="false">Type</string>
    <string name="save_guide" translatable="false">Save Guide</string>
    <string name="area" translatable="false">Area</string>
    <string name="subject" translatable="false">Subject</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="admin_user_management">User Management</string>
    <string name="admin_delivery_management">Delivery Task Management</string>
    <string name="admin_Analytics">Analytics</string>
    <string name="admin_title">WanderEase Admin</string>
    <string name="admin_profile_information">Profile Information</string>
    <string name="admin_delivery_to_assign">To Assign</string>
    <string name="admin_delivery_active">Active</string>
    <string name="admin_delivery_delivered">Delivered</string>
    <string name="assign">Assign</string>
    <string name="assign_delivery">Assign Delivery</string>
    <string name="cancel">Cancel</string>
    <string name="select_courier">Select Courier</string>
    <string name="call_courier">Call Courier</string>
    <string name="users" translatable="false">Users</string>
    <string name="add_courier" translatable="false">Add new Courier</string>
    <string name="no_bookings" translatable="false">No bookings yet</string>
    <string name="deliver_title" translatable="false">WanderEase Delivery</string>
    <string name="deliver_new_tasks">New Tasks</string>
    <string name="deliver_completed_tasks">Completed Tasks</string>
    <string name="delivery_messages">Messages</string>
    <string name="delivery_mark_as_delivered">Mark as Done</string>
    <string name="call_buyer">Call Buyer</string>
    <string name="view">View</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_id">Order ID:</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="total_orders">Total Orders</string>
    <string name="total_products">Total Products</string>
    <string name="sales_by_category">Sales by Category</string>
    <string name="order_status">Order Status</string>
    <string name="total_users">Total Users</string>
    <string name="total_couriers">Total Delivery Personnel</string>
    <string name="email_regex" translatable="false">^(?=.{1,64}@)[A-Za-z0-9_-]+(\\.[A-Za-z0-9_-]+)*@[^-][A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*(\\.[A-Za-z]{2,})$</string>
    <string name="mobile_regex" translatable="false">^07[01245678]{1}[0-9]{7}$</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>