<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:icon="@drawable/search_icon"
            android:title="@string/bottom_nav_home" />
        <item
            android:id="@+id/bottom_menu_saved"
            android:icon="@drawable/ic_favorite_border"
            android:title="@string/bottom_nav_saved" />
        <item
            android:id="@+id/bottom_menu_cart"
            android:icon="@drawable/cart_icon_bordered"
            android:title="@string/bottom_nav_cart" />
        <item
            android:id="@+id/bottom_menu_booking"
            android:icon="@drawable/ic_saved"
            android:title="@string/bottom_nav_bookings" />
        <item
            android:id="@+id/bottom_menu_account"
            android:icon="@drawable/ic_account"
            android:title="@string/bottom_nav_Account" />
    </group>
</menu>