<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.account.MyOrdersActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_orders_toolbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/account_menu_orders" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/my_orders_tabLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_orders_toolbar"
        app:tabBackground="@color/background">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/my_order_all_tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_orders_completed_orders" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/my_order_to_receive_tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_orders_to_receive_orders" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/my_order_to_review_tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_orders_to_review_orders" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/my_orders_fragment_container_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_orders_tabLayout">

    </androidx.fragment.app.FragmentContainerView>
</androidx.constraintlayout.widget.ConstraintLayout>