<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.SearchFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/home_search_tabLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabInlineLabel="false">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home_search_tab_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_product" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home_search_tab_rental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_vehicleRental" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home_search_tab_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_search_guide" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_search_tabLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/home_search_fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>