<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.account.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/background_simple"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/settings" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/settings_language_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#FFFFFF"
                android:gravity="start"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingRight="8dp"
                android:paddingBottom="15dp"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="0dp"
                app:rippleColor="#D0D0D0" />

            <Button
                android:id="@+id/settings_policies_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:backgroundTint="@color/white"
                android:gravity="start"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingRight="8dp"
                android:paddingBottom="15dp"
                android:text="@string/policies"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="0dp"
                app:rippleColor="#D0D0D0" />

            <Button
                android:id="@+id/settings_logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:paddingRight="8dp"
                android:paddingBottom="15dp"
                android:text="@string/logout"
                android:textColor="#009688"
                android:textSize="16sp"
                app:cornerRadius="0dp"
                app:rippleColor="#D0D0D0" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>